@@ -1,3 +1,8 @@
+2011-04-06  Sam Steingold  <sds@gnu.org>
+
+	* socket.tst: add an IPC test which triggers ECONNRESET and EPIPE
+	* econnreset.lisp: remove (never used)
+
 2011-03-31  Sam Steingold  <sds@gnu.org>
 
 	* tests.lisp (handler-return): add
