@@ -1,3 +1,9 @@
+2011-04-06  Sam Steingold  <sds@gnu.org>
+
+	* unixaux.d (fd_read): revert the 2008-12-30 patch which closed
+	the fd on ECONNRESET without marking the lisp stream as closed,
+	thus leading to EBADF when the stream was closed
+
 2011-04-05  Bruno Haible  <bruno@clisp.org>
 
 	Tweak last two changes.
